Compiler/tests/good/Variables/02_variables.rs
fn main(){
    let mut x:i32 = 21;
    x = x + x;
}