Compiler/tests/bad/Variables/01_variable.rs
fn main(){
    let x = 23;
    x = x + 32;
}